--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -1,10 +1,20 @@
-<h2>Login to Financial Tracker</h2>
-<form id="loginForm">
-    <label for="username">Username:</label>
-    <input type="text" id="username" class="form-control" required>
-
-    <label for="password">Password:</label>
-    <input type="password" id="password" class="form-control" required>
-
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-lg p-4 mt-5">
+                <h2 class="text-center mb-4">Login to Financial Tracker</h2>
+                <form id="loginForm">
+                    <div class="form-group">
+                        <label for="username">Username:</label>
+                        <input type="text" id="username" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" class="form-control" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block">Login</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
